--- a/check_box.html
+++ b/check_box.html
@@ -7,7 +7,7 @@
     <body>
         <p><h1><a
             href="check_box.html"
-        >TO DO LIST</h1></p>
+                  >TO DO LIST</h1></a></p>
         <p>
             <input type="checkbox">html study<br>
             <input type="checkbox">make to do list<br>
